--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                         <h1>I'm Nasir Howard</h1>
 
 
-                        <p class="intro-desc"><span>Designer</span>
+                        <p class="intro-desc"><span>Athlete</span>
                         <span class="colour-splash">•</span>
-                        <span>Adventurer</span> <span class=
+                        <span>Mathmatican</span> <span class=
                         "colour-splash">•</span> <span>Coffee
                         Drinker</span></p>
                     </div>
@@ -102,11 +102,8 @@
                     <hr>
 
 
-                    <p class="lead">Lorem Ipsum is simply dummy text of the
-                    printing and typesetting industry. <span>Lorem Ipsum</span>
-                    has been the industry's standard dummy text ever since the
-                    1500s, when an <span>unknown printer</span> took a galley
-                    of type and scrambled it to make a type specimen book.</p>
+                    <p class="lead"> i am rising 11th grader at <span> baltimore polytechnic institute</span>
+                   where i have years of experince in <span>High Level</span> STEM classes including Chemistry & Algebra 2.</p>
                 </div><!-- /col-md-6 -->
             </div><!-- / row -->
         </div><!-- /container -->
@@ -135,42 +132,32 @@
                 <div class="col-md-4 text-center">
                     <span class="lnr lnr-user"></span>
 
-                    <h2>Heading</h2>
+                    <h2>Languages</h2>
 
 
-                    <p>Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has been the industry's
-                    standard dummy text ever since the 1500s, when an unknown
-                    printer took a galley of type and scrambled it to make a
-                    type specimen book.</p>
+                    <p> I have 6+ years of expreince with the spanish language and in the 2022-2023 SY i will be taking AP Spanish, and according to the ACTFL im intermediate high spanish speaker
+                        additionaly im learning portuguese.</p>
                 </div>
 
 
                 <div class="col-md-4 text-center">
                     <span class="lnr lnr-star"></span>
 
-                    <h2>Heading</h2>
+                    <h2>STEM Skills</h2>
 
 
-                    <p>Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has been the industry's
-                    standard dummy text ever since the 1500s, when an unknown
-                    printer took a galley of type and scrambled it to make a
-                    type specimen book.</p>
+                    <p>i Have 5 highschool math credits at the age of 16 and plan on taking calculus 1 & 2 before i graduate. i also have taken introductory courses in biology and chemistry
+                    and ive been exposed to engneering concepts and classes since the 5th grade</p>
                 </div>
 
 
                 <div class="col-md-4 text-center">
                     <span class="lnr lnr-diamond"></span>
 
-                    <h2>Heading</h2>
+                    <h2>Athletics</h2>
 
 
-                    <p>Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has been the industry's
-                    standard dummy text ever since the 1500s, when an unknown
-                    printer took a galley of type and scrambled it to make a
-                    type specimen book.</p>
+                    <p> ive been playing baskeball for several years and ive recived intrest from colleges such as UMBC and Radford University</p>
                 </div>
             </div> <!-- / row -->
         </div><!-- /container -->
