--- a/index.html
+++ b/index.html
@@ -202,10 +202,7 @@
                                 <h2>This Happened</h2>
 
 
-                                <p>Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Atque, facilis quo maiores
-                                magnam modi ab libero praesentium
-                                blanditiis.</p>
+                                <p> i went to roland park elementary middle school from 2012-2020 </p>
                             </div>
                         </div>
                         <!-- /Timeline Item-->
@@ -250,10 +247,7 @@
                                 <h2>This Happened</h2>
 
 
-                                <p>Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Atque, facilis quo maiores
-                                magnam modi ab libero praesentium
-                                blanditiis.</p>
+                                <p> Enrolled at Baltimore Polytechnic insituite in fall 2020</p>
                             </div>
                         </div>
                         <!-- /Timeline Item-->
@@ -274,10 +268,7 @@
                                 <h2>This Happened</h2>
 
 
-                                <p>Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Atque, facilis quo maiores
-                                magnam modi ab libero praesentium
-                                blanditiis.</p>
+                                <p> Verizon Innovative learning Progam 2017-2019</p>
                             </div>
                         </div>
                         <!-- /Timeline Item-->
@@ -298,10 +289,7 @@
                                 <h2>This Happened</h2>
 
 
-                                <p>Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Atque, facilis quo maiores
-                                magnam modi ab libero praesentium
-                                blanditiis.</p>
+                                <p> Honors Poly Stem Progam 2020-present </p>
                             </div>
                         </div>
                         <!-- /Timeline Item-->
