--- a/index.html
+++ b/index.html
@@ -200,10 +200,9 @@
                                 <h2>This Happened</h2>
 
 
-                                <p>Lorem ipsum dolor sit amet, consectetur
-                                adipisicing elit. Atque, facilis quo maiores
-                                magnam modi ab libero praesentium
-                                blanditiis.</p>
+                                <p> coding experince 2020-present
+                              
+                                  </p>
                             </div>
                         </div>
                         <!-- /Timeline Item-->
